# flextime-x11

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.ac  daemon.c  datemsk  flextime.1  flextimed.1  main.c  measurement.proto  print.c
rpmbuild/: flextime.spec
